# VGenes

./: .gitignore  111.vdb  121.vdb  AdvanceSelectiondialog.ui  BackUP.vdb  BeesWarmPlotdialog.ui  CSV-Table.py  ChangeOdialog.ui  ChangeOdialog.ui.autosave  CloneMethods.xlsx  CloneOptiondialog.ui  Clonify.py  CmnDialog.py  CodonTable.py  ComboCheckBox.py  Convert-IMGT.py  Database-example.py  FASTA from Fri Mar 20 14:52:05 2020.nt  FASTA from Fri Mar 20 14:59:02 2020.nt  FieldList.docx  Fields.xlsx  Flu.icns  HA5.vdb  HA6.vdb  HA_Numbering.py  HeatmapViewerdialog.ui  HistGramdialog.ui  IUPAC.py  IgBLASTer.py  Import_Dialogue.ui  IsoelectricPoint.py  IterateTreeWidgetEx.py  KavalFlu+.vdb  MakeDb.py  MarkRecordsdialog.ui  ModFinder.py  Open-Save-Dialogs.py  PatternSearchResultDialog.ui  PatternSearchdialog.ui  Pop-up Window example.py  (+130 more)
ClustalOmega/: 039914202139498c8b6d10ade8f66555In.fa  3fba4c918f154f319e2ca82d275dd36bIn.fa  60c4bb312b254931837a2e2edb082090In.fa  ChangeLog  Doxyfile  cb9448d1b3854d7b80bd96c5be73927aIn.fa  cb9448d1b3854d7b80bd96c5be73927aOut.fa  configure  configure.ac  d5ad29743af34a0f9334594c9949ff7dIn.fa  edbe332240cc4b81a229278bb1121524In.fa  test.vdb
Conf/: RecentPaths.vtx  igblast_reference_presets.json  joint_setting.txt  pre_defined_export_option.txt
Data/: AbVecConnectors.txt  GibsonConnectors.txt  HtConnectors.txt  Miew.html  VDJGenes.db  mac.html  template.html  templateAID.html  template_ProteinViewer.html  template_circos.html  template_newick_tree.html  template_raxml_tree.html  template_tree.html  win.html
FridgeMagnets/: words.txt  (+2 more)
(+456 files in other folders)
