[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgenes"
description = "Desktop application for B cell receptor repertoire analysis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Wilson Immunology Lab" },
  { name = "Wilson P." },
  { name = "Lei Li" }
]
keywords = ["immunology", "bcr", "repertoire", "pyqt", "bioinformatics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://wilsonimmunologylab.github.io/VGenes/"
Repository = "https://github.com/WilsonImmunologyLab/VGenes"
Documentation = "https://wilsonimmunologylab.github.io/VGenes/"

[tool.setuptools]
py-modules = ["vgenes_version"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "vgenes_version.__version__" }
dependencies = { file = ["requirements.txt"] }
